--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -25,10 +25,10 @@
               <a class="nav-link" href="/session">Iniciar Sesión</a>
             </li>
             <li class="nav-itme">
-              <a class="nav-link" href="/formCarga">Cargar Producto</a>
+              <a class="nav-link" href="/paquetes/formCarga">Cargar Producto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/modifProducto">Modificar Producto</a>
+              <a class="nav-link" href="/paquetes/modifProducto">Modificar Producto</a>
             </li>
             <li class="nav-item">
               <i class="fas fa-headphones-alt"></i>
